--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
                     Merry Christmas, Namamasko po🥹ekk HAHAHAHAHAHA. I just want to say that I miss you so much na. I’ve learned a lot from our situation because it was my first time experiencing everything. Gusto ko na those first times will last with you, so paninindigan ko lahat ng mga sinabi ko at mga promise ko sayo. Sorry kung medyo madisappoint kita dito sa message ko kasi ang ikli lang, pero gusto ko lang ipaalala na I care for you deeply. Take care always, my dear 😊. Nandito lang ako sa tabi mo if you ever need anything anytime, not literally na nasa tabi mo, but I'm always here.☺️
                     
-                    And ohhh,Happy New Year, na din! Thank you kasi naging malaking parte ka ng buhay ko. I hope na balang araw, ikaw na rin ang magiging forever na parte ng buhay ko, ang kalahati ng puso at katawan ko habang buhay.
+                    And ohhh,Happy New Year, na din! Thank you kasi naging malaking parte ka ng buhay ko. I hope na balang araw, ikaw na rin ang magiging forever na parte ng buhay ko, ang kalahati ng puso at katawan ko habang buhay.  Hindi muna kita mabibigyan ng regalo sa ngayon pero tanggapin mo sana toh bilang regalo ko sayo ngayong pasko.
                     <br><br>
                     Again, Merry Christmas and Happy New Year! Enjoy a very special day with your family🎄🎆.</div>
                 <button id="close-button">X</button>
