--- a/index.html
+++ b/index.html
@@ -203,9 +203,9 @@
 
                     Merry Christmas, Namamasko po🥹ekk HAHAHAHAHAHA. I just want to say that I miss you so much na. I’ve learned a lot from our situation because it was my first time experiencing everything. Gusto ko na those first times will last with you, so paninindigan ko lahat ng mga sinabi ko at mga promise ko sayo. Sorry kung medyo madisappoint kita dito sa message ko kasi ang ikli lang, pero gusto ko lang ipaalala na I care for you deeply. Take care always, my dear 😊. Nandito lang ako sa tabi mo if you ever need anything anytime, not literally na nasa tabi mo, but I'm always here.☺️
                     
-                    And ohhh Thank you for being such a significant part of my life. Although I can't give you a physical gift right now, but I hope you’ll accept this heartfelt message as my special Christmas present to you. 🎁
+                    And ohhh Thank you for being such a significant part of my life. Although I can't give you a physical gift right now, I hope you’ll accept this heartfelt message as my special Christmas present to you. 🎁
 
-                    May this season bring you peace, joy, and countless blessings. Wishing you a Merry Christmas and a New Year filled with love, happiness, and wonderful moments. 🎄✨mas and Happy New Year! Wishing you a joyful and blessed holiday filled with love and happiness.🎄🎆 <br>Sincerely, <br>
+May this season bring you peace, joy, and countless blessings. Wishing you a Merry Christmas and a New Year filled with love, happiness, and wonderful moments. 🎄✨ <br>Sincerely, <br>
                 Jeho</div>
                 <button id="close-button">X</button>
             </div>
